# yunmai_weight_extract2json

./: .gitignore  Dockerfile  LICENSE  README.md  a.py  delete.py  fetcher.py  fsy_yunmai_token  garmin_recap.py  getAccessToken.py  getUserReport.py  getWeightData.py  login.py  main.py  multiGetWeight.py  pyproject.toml  requirements.txt  sync_weight.py  template.html  weekly_data_fsy.json  weekly_report_fsy.html  weekly_report_fsy_v2.html  weekly_report_wyf.html  weekly_report_wyf_v2.html  weekly_template.html  weekly_template2.html  weight_Mr. Feng.json  weight_fsy.json  weight_report_fsy.html  weight_report_template.html  weight_report_wyf.html  weight_wyf.json  weight_{nickname}.json
.github/workflows/: docker-image.yml  run_data_sync.yml
output/: weekly_report_fsy.html  weekly_report_fsy_v2.html  weekly_report_wyf.html  weekly_report_wyf_v2.html  weight_fsy.json  weight_fsy.jsonBAK  weight_report_fsy.html  weight_report_wyf.html  weight_wyf.json  wyf_yunmai_token
static/: 13642865881_weight.html  17503049257_weight.html  fsy_weight.html  index.html  wyf_weight.html
template/: weight_report_template.html
workouts_recap/: recap_template.html  recap_total_template.html
