[project]
name = "yunmai-weight-extract2json"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask==3.1.1",
    "garminconnect==0.2.28",
    "garth==0.5.17",
    "jinja2==3.1.6",
    "pycryptodome==3.23.0",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.4",
]


[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
